--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -255,16 +255,22 @@ main {
 
 .services {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   background-color: #e7e6e6;
   padding-top: 1.5rem;
   padding-bottom: .5rem;
   font-size: 0.75rem;
+  text-align: left;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 .service {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .last {
@@ -316,13 +322,243 @@ footer {
   padding-bottom: 10px;
 }
 
+/* Desktop Only ----- */
+
+.desktop-phone {
+  display: none;
+}
+
+.nav, .desktop-nav {
+  display: none;
+}
+
+.desktop-filter {
+  display: none;
+}
+
 /* Media Query for Desktop View ----- */
 
 @media screen and (min-width: 768px) {
+
+  /* Main Section Desktop Styles ----- */
   main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 2.5rem 1rem 1rem 1rem;
+    width: 1250px;
+    max-width: 100%;
+    margin: 0 auto 3rem auto;
   }
+
+  .business {
+    margin: 0.5rem;
+    border-radius: 10px;
+    width: 40% !important;
+    
+  }
+
+  .business .middle, .last h1 {
+    margin-bottom: 2rem;
+  }
+
+  .mobile-phone {
+    display: none;
+  }
+
+  .phone {
+    background-color: #ffffff;
+    color: black;
+  }
+
+  #number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .desktop-phone {
+    display: block;
+    font-size: 1.5rem;
+    border-top: 1px solid #999;
+    padding-top: 1rem;
+    border-radius: 0;
+  }
+
+  .services {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+
+  /* Navigation and Header Desktop Styles ----- */
+  .banner img {
+    transform: scale(1);
+    width: 100%;
+    margin-bottom: 0rem;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
+
+  .nav, .desktop-nav {
+    display: block;
+  }
+
+  .nav {
+    width: 100%; /* Full width */  
+    z-index: 9999;   
+    box-shadow: 0 1px 1px #888888;   
+  }
+
+.desktop-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 64px;
+    max-width: 1250px;
+    margin: 0 auto;
+  }
+
+  .desktop-nav ul li {
+    list-style-type: none;
+    display: inline;
+    margin: 1rem;
+  }
+
+  #pool-logo {
+    max-width: 18%;
+  }
+
+  .desktop-nav span {
+    border: 2px solid #1f59b1;
+    color: #1f59b1;
+    padding: 0.5rem;
+    border-radius: 5px;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    font-size: 0.90rem;
+    font-weight: bold;
+    text-decoration-style: none;
+  }
+
+  /* Filter Section ----- */
+
+  .filters {
+    background-color: #f0eeee;
+    display: flex;
+    align-items: center;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    max-width: 960px;
+    margin: 0 auto;
+    border: none;
+    border-radius: 10px;
+  }
+  
+  .filter-head {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 90%;
+    margin: 0 auto;
+    background-color: #f0eeee;
+    border: none;
+  }
+
+  .filter-form {
+    background-color: #f0eeee;
+    max-width: 90%;
+    margin: auto;
+    padding: 2rem 1rem 1rem 1rem;
+    border: none;
+    display: inline-block;
+  }
+
+  .filter {
+    border: none;
+    background-color: #f0eeee;
+  }
+
+  .filters .filter {
+    background-color: #f0eeee;
+    border: none;
+  }
+
+  .mobile-filter {
+    display: none;
+  }
+
+  .desktop-filter {
+    display: inline;
+  }
+
+  .filter-form form {
+    display: inline-flex;
+    border: none;
+  }
+
+  .filter-form form input, label {
+    margin-right: 1rem;
+  }
+
+  body > section > div.filter-form > form > input[type="checkbox"] {
+    margin-top: 0;
+  }
+
+  #filter-result {
+    border-right: 1px solid #a3a5a883;
+    padding-right: 2rem;
+  }
+
+
+  /* Footer Styles ----- */
+  footer {
+    color: white;
+    text-align: center;
+  }
+  
+  .footer-top {
+    background-color: #1f59b1;
+    padding-top: 1.5rem;
+  }
+  
+  .footer-bottom {
+    background-color: #2e71d4;
+    font-size: 0.80rem;
+    padding-top: 1.25rem;
+    padding-bottom: 0.5rem;
+  }
+  
+  #footer-logo {
+    max-width: 15%;
+    margin: auto;
+  }
+  
+  .social {
+    display: flex;
+    justify-content: center;
+    max-width: 90%;
+    height: 3rem;
+    margin: 0 auto;
+    padding-top: 1rem;
+  }
+  
+  .social img {
+    max-height: 50%;
+    margin-right: 10px;
+  }
+  
+  #p-border {
+    max-width: 90%;
+    margin: 0 auto;
+    padding-bottom: 10px;
+    border: none;
+  }
+
+  .mobile-footer-text {
+    display: none;
+  }
+
 }
