--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -166,6 +166,10 @@ main {
   box-shadow: 3px 3px 3px -3px #999, 3px 3px 3px -3px #999, -3px 3px 3px -3px #999
 }
 
+.business:hover {
+  transform: scale(1.03);
+}
+
 .business img {
   width: 12%;
 }
@@ -363,7 +367,7 @@ footer {
     box-shadow: 3px 3px 3px 3px #999, 3px 3px 3px -3px #999, 3px 3px 3px -3px #999, -3px 3px 3px -3px #999;
   }
 
-  .business .middle, .last h1 {
+  .business .middle, .busy h1 {
     margin-bottom: 2rem;
   }
 
@@ -589,4 +593,100 @@ footer {
     display: none;
   }
 
+}
+
+/* MODAL ---------- */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  border: 1px solid #888;
+  width: 85%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-form label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+#mymodal fieldset {
+  padding: 0;
+}
+
+.modal-form input, textarea {
+  background-color: #d4d4d4;
+  width: 100%;
+  display: inline;
+  border-radius: 5px;
+  border: none;
+  font-size: 1rem;
+}
+.modal-form input {
+  height: 3.25rem;
+  margin-bottom: 1rem;
+}
+
+.modal-form textarea {
+  height: 3.25rem;
+  margin-bottom: 1rem;
+}
+
+.modal-form {
+  padding: 1rem;
+  font-size: 0.85rem;
+}
+
+.modal-title {
+  background-color: #1f59b1;
+  color: white;
+  padding: 1rem;
+}
+
+.modal-title p {
+  font-size: 0.7rem;
+}
+
+label.light {
+  display: inline;
+  font-size: 0.80rem;
+}
+
+.question-section input {
+  width: 5% !important;
+  height: 1rem !important;
+  margin-bottom: 1rem;
+}
+
+.question-section p {
+  text-align: left;
 }
