--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,10 +68,12 @@ a:visited {
 
 #pool-logo {
   max-width: 40%;
+  padding-left: 1rem;
 }
-
 #mobile-menu {
-  max-width: 72%;
+  max-width: 77%;
+}
+.mobile-menu {
   align-content: flex-end;
   position: relative;
   top: 0.5rem;
@@ -352,6 +354,10 @@ footer {
   width: 100%;
 }
 
+.mobile-nav-list li a:visited { 
+  color: #696b6d;
+}
+
 .mobile-nav-list li {
   background-color: #e9e9e9;
   color: #6a6c70 !important;
@@ -384,16 +390,17 @@ footer {
   font-weight: bold;
 }
 
-.mobile-nav-list-close {
+#mobile-nav-list-close {
   position: absolute;
   right: 20px;
   top: 15px;
   font-weight: bold;
   color: #1fb19e;
+  font-size: 1.25rem;
 }
 
-.mobile-nav-list-close a:visited {
-  color: #1fb19e !important;
+#mobile-nav-list-close a:visited {
+  color: #1fb19e;
 }
 
 
@@ -710,6 +717,7 @@ footer {
 .modal-form label {
   display: block;
   margin-bottom: 8px;
+  padding-left: 0;
 }
 
 #mymodal fieldset {
@@ -717,15 +725,14 @@ footer {
 }
 
 .modal-form input, textarea {
-  background-color: #d4d4d4;
+  background-color: #ffffff;
   width: 100%;
   display: inline;
-  border-radius: 5px;
-  border: none;
+  border: 1px solid #a5a7a8;
   font-size: 1rem;
 }
 .modal-form input {
-  height: 3.25rem;
+  height: 2.75rem;
   margin-bottom: 1rem;
 }
 
@@ -739,10 +746,17 @@ footer {
   font-size: 0.85rem;
 }
 
+.modal-form legend {
+  color: #696b6d;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .modal-title {
   background-color: #1f59b1;
-  color: white;
-  padding: 1rem;
+  color: #ffffff;
+  font-size: 1.25rem;
+  padding: 1.30rem;
 }
 
 .modal-title p {
