--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,8 +67,8 @@ a:visited {
 /* Navigation Styles --------------- */
 
 #pool-logo {
-  max-width: 40%;
-  padding-left: 1rem;
+  max-width: 42%;
+  padding-left: 1.15rem;
 }
 #mobile-menu-button {
   max-width: 77%;
@@ -88,6 +88,7 @@ a:visited {
 
 .mobile-nav {
   position: relative;
+  height: 60px;
 }
 
 
