--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -132,6 +132,7 @@ a:visited {
   justify-content: space-between;
   max-width: 90%;
   margin: 0 auto;
+  align-items: center;
 }
 
 .filter-head span {
@@ -141,8 +142,14 @@ a:visited {
 .filters .filter {
   background-color: #ffffff;
   border-top: 0.5px solid #696b6d;
+  border-bottom: 0.5px solid #696b6d;
   border-right: 0.5px solid #696b6d;
   border-left: 0.5px solid #696b6d;
+  padding: 1rem;
+}
+
+.mobile-filter {
+  display: flex;
 }
 
 .filter-form {
@@ -151,6 +158,7 @@ a:visited {
   margin: auto;
   padding: 2rem 1rem 1rem 1rem;
   border: 0.5px solid #696b6d;
+  display: none;
 }
 
 input {
