--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -133,6 +133,8 @@ a:visited {
   max-width: 90%;
   margin: 0 auto;
   align-items: center;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
 }
 
 .filter-head span {
@@ -150,6 +152,9 @@ a:visited {
 
 .mobile-filter {
   display: flex;
+  margin-right: 1rem;
+  width: 9rem;
+  box-shadow: 0 0 2px 1px rgb(138, 135, 135);
 }
 
 .filter-form {
@@ -172,6 +177,7 @@ label {
 #filter-result {
   color: #1f59b1;
   font-weight: bolder;
+  margin-right: 0rem;
 }
 
 /* Business Section ---------- */
