--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,49 +1,3 @@
-/* Web Fonts --------------- */
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-bold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-bolditalic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-extrabold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-extrabolditalic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-italic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-light.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-lightitalic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-semibold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/open-sans/opensans-semibolditalic.ttf') format('truetype');
-}
-
 /* Main CSS Styles --------------- */
 
 * {
@@ -133,8 +87,6 @@ a:visited {
   max-width: 90%;
   margin: 0 auto;
   align-items: center;
-  padding-bottom: 0.10rem;
-  padding-top: 0.10rem;
 }
 
 .filter-head span {
@@ -148,6 +100,12 @@ a:visited {
   border-right: 0.5px solid #696b6d;
   border-left: 0.5px solid #696b6d;
   padding: 1rem;
+}
+
+.question {
+  width: 4%;
+  position: relative;
+  top: 0.25rem;
 }
 
 .mobile-filter {
@@ -719,9 +677,21 @@ button {
     background-color: #f0eeee;
     max-width: 90%;
     margin: auto;
-    padding: 2rem 1rem 1rem 1rem;
+    padding: 2.25rem 1rem 1rem 1rem;
     border: none;
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    box-shadow: none;
+    height: 5rem;
+  }
+
+  body > section > div.filter-form > form > span {
+    margin-right: 0rem;
+  }
+
+  .question {
+    width: 55%;
+    top: -0.6rem !important;
   }
 
   .filter {
@@ -744,6 +714,7 @@ button {
 
   .filter-form form {
     display: inline-flex;
+    align-items: center;
     border: none;
   }
 
