--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -87,6 +87,10 @@ a:visited {
   transform: scale(1.5);
 }
 
+.nav-list a:hover {
+  color: $color-secondary;
+}
+
 /* Filter Results Section --------------- */
 .filters {
   background-color: $color-background;
@@ -201,6 +205,9 @@ main {
   padding-right: 0rem;
   padding-bottom: 1rem;
   max-width: 60%;
+  &:hover {
+    transform: scale(1.05);
+  }
   span {
     color: $color-primary;
     font-weight: $font-bold;
@@ -260,6 +267,9 @@ footer {
     font-size: 0.80rem;
     padding-top: 1.25rem;
     padding-bottom: 1rem;
+    p {
+      font-weight: $font-light;
+    }
     #p-border {
       border-bottom: 1px solid $color-light;
       max-width: 90%;
