--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,6 +79,9 @@ a:visited {
   padding-bottom: 1.5rem;
   transform: scale(1.5); }
 
+.nav-list a:hover {
+  color: #1fb19e; }
+
 /* Filter Results Section --------------- */
 .filters {
   background-color: #f0eeee;
@@ -178,6 +181,8 @@ main {
   padding-right: 0rem;
   padding-bottom: 1rem;
   max-width: 60%; }
+  .contact:hover {
+    transform: scale(1.05); }
   .contact span {
     color: #1f59b1;
     font-weight: 700; }
@@ -226,6 +231,8 @@ footer {
     font-size: 0.80rem;
     padding-top: 1.25rem;
     padding-bottom: 1rem; }
+    footer .footer-bottom p {
+      font-weight: 200; }
     footer .footer-bottom #p-border {
       border-bottom: 1px solid #ffffff;
       max-width: 90%;
@@ -421,11 +428,10 @@ label.light {
   .phone {
     background-color: #ffffff;
     color: black; }
-
-  #number {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+    .phone #number {
+      display: flex;
+      justify-content: center;
+      align-items: center; }
 
   .desktop-phone {
     display: block;
@@ -455,7 +461,6 @@ label.light {
 
   .nav {
     width: 100%;
-    /* Full width */
     z-index: 9999;
     box-shadow: 0 1px 1px #888888; }
 
@@ -484,6 +489,8 @@ label.light {
     font-size: 0.90rem;
     font-weight: 700;
     text-decoration-style: none; }
+    .desktop-nav span:hover {
+      color: #1fb19e; }
 
   .desktop-top {
     background-color: #1f59b1;
@@ -492,7 +499,10 @@ label.light {
   .desktop-top ul li {
     list-style-type: none;
     display: inline;
-    margin: 1rem; }
+    margin: 1rem;
+    color: #ffffff; }
+    .desktop-top ul li:hover {
+      color: #f0eeee; }
 
   .container {
     max-width: 1250px;
@@ -598,12 +608,13 @@ label.light {
     justify-content: center;
     max-width: 90%;
     height: 3rem;
-    margin: 0 auto;
-    padding-top: 1rem; }
-
-  .social img {
-    max-height: 50%;
-    margin-right: 10px; }
+    margin: 0 auto; }
+    .social img {
+      max-height: 50%;
+      margin-right: 10px; }
+    .social span {
+      font-weight: 200;
+      margin-right: 1rem; }
 
   #p-border {
     max-width: 90%;
@@ -614,8 +625,8 @@ label.light {
   .mobile-footer-text {
     display: none; }
 
-  .modal-content {
-    width: 30%; }
+  .modal .modal-content {
+    width: 40%; }
 
   .form-container {
     background-color: #e6e6e6;
